...
            .navigationTitle("Attractions").foregroundColor(Color("purps"))
            .toolbar {
                ToolbarItem(placement: .navigationBarTrailing) {
                    Button(action: {
                        isChecklistVisible.toggle()
                    }) {
                        Text("Select Attractions").accessibilityIdentifier("Select Attractions").foregroundColor(Color("orange")).bold()
                    }
                }
                ToolbarItem(placement: .navigationBarTrailing) {
                    NavigationLink(
                        destination: MapPageView(itinerary: Itinerary(itineraryName: itineraryName, attractions: selectedAttractions, numberOfDays: numberOfDays, tourDuration: tourDuration, plan: plan), disableSave: false).navigationTitle("")
                            ) {
...
                        }
                    }
                }
                .navigationBarTitle("Select Attractions").foregroundColor(Color("purps"))
                .toolbar {
                    ToolbarItem(placement: .navigationBarLeading) {
                        Button("Cancel") {
                            selectedAttractions = []
                            isChecklistVisible.toggle()
                        }
                        .accessibilityIdentifier("Cancel")
                        .foregroundColor(Color(.systemBlue))
                        .bold()
                        
                    }
                    ToolbarItem(placement: .navigationBarTrailing) {
                        NavigationLink(destination: NumberofDaysInputView(selectedAttractions: $selectedAttractions, itineraryName: $itineraryName, plan: $plan, tourDuration: $tourDuration, numberOfDays: $numberOfDays, isNumberofDaysActive: $isNumberofDaysActive, isChecklistVisible: $isChecklistVisible, validPlan: $validPlan)) {
                            Text("Next").accessibilityIdentifier("Next").foregroundColor(Color("orange"))
                                .bold()
                        }
                    }                }
            }
        }
    
...
