...
            }
        }
        .navigationBarTitle("", displayMode: .inline)
        .navigationBarItems(
            leading: HStack {
                NavigationLink(destination: LoginView().navigationBarBackButtonHidden(true)) {
                    Text("Sign Out").accessibilityIdentifier("Sign Out").foregroundColor(Color(.systemBlue)).bold()
                }
                Spacer().frame(width: 40)
                Text("My Trips")
                    .font(.largeTitle)
                    .foregroundColor(Color("purps"))
                    .accessibilityIdentifier("MyTripsIdentifier")
...
                ZStack {
                    Circle()
                        .foregroundColor(Color("orange")) // Use the RGB values
                        .frame(width: 22, height: 22)
                    
                    NavigationLink(destination: AttractionView().navigationBarBackButtonHidden(false)) {
                        Image(systemName: "plus")
                            .foregroundColor(.white)
                            .accessibilityIdentifier("PlusIdentifier")
                            .frame(width: 22, height: 22)
                            .bold()

                    }
...
